apps/cluster-api/templates/external/capi-webhook-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    cluster.x-k8s.io/provider: cluster-api
  name: capi-webhook-service
  namespace: system-cluster-api
spec:
  ports:
    - port: 443
      targetPort: webhook-server
  selector:
    cluster.x-k8s.io/provider: cluster-api
